packages/tracecat/v0.8.6+1/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracecat-api
  labels:
    app.kubernetes.io/name: tracecat-api
spec:
  selector:
    matchLabels:
      app: tracecat-api
  template:
    metadata:
      labels:
        app: tracecat-api
    spec:
      containers:
        - name: tracecat-api
          image: "ghcr.io/tracecathq/tracecat:0.8.6"
          ports:
            - containerPort: 8000
