packages/tracecat/v0.8.6+1/api-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tracecat-api
spec:
  ports:
    - port: 8000
      name: tracecat-api
  selector:
    app: tracecat-api
