packages/tracecat/v0.8.6+1/ui-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tracecat-ui
spec:
  ports:
    - port: 3000
      name: tracecat-ui
  selector:
    app: tracecat-ui
