packages/tracecat/v0.8.6+1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracecat
spec:
  rules:
    - host: tracecat.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tracecat-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracecat-ui
                port:
                  number: 3000
#   tls:
#   - secretName: ssl-example2.kubernetes.localhost
#     hosts:
#     - example2.caddy.dev
